# TFG-Interpretability-Techniques-in-Social-Media-Images

./: .gitignore  README.md  pyproject.toml  requirements.txt
code/: main.py  main_spanish.py  mapping_csv.py  mapping_csv_scores.py  requirements.txt  template_settings.py  test_ex.py  twitter_analysis.ipynb  twitter_analysis.py
code/data_processing/: csv_process.py  dataset.py  unlabeled_dataset.py
code/interpretability/: gradcam.py  gradcam_all.py  gradcam_backprop.py  guided_gradcam.py  lime.py  occlusion_sensitivity.py  shap.py  shap2.py  xrai.py
code/models/: backbone.py  multitask_model.py  wrappers.py
code/utils/: denormalize_image.py  main_utils.py  metrics_utils.py  visualization.py
data/: 43_1.csv  43_2.csv  X_labels_agreements_0204.csv
data_files/: 39_20250401_0816.csv  43.csv  43_3.csv  51.csv  X_labels_agreements_0104.csv  X_labels_agreements_0205.csv
executes/: 71831_dense.out  71832_resnet50.out  71837_efficient.out  71841_resnet18.out  71864.out  72499.err  72499.out  72502.err  72502.out  72515.err  72515.out  72518.err  72518.out  72519.err  72519.out  72547.err  72547.out  72559.err  72559.out  72561.err  72561.out  72567.out  72573.err  72573.out  72576.out  73543.err  73543.out  73578.err  73578.out  74510.err  74510.out  75549.err  75549.out  75575.err  75575.out  76191.err  76191.out  76198.err  76198.out  76224.err  (+18 more)
output/: preds_spanish_dataset(mapped).csv  preds_spanish_dataset.csv  preds_spanish_df_scores(mapped).csv  preds_spanish_df_scores.csv
